[Qt] QGLauncher crashes while closing a window https://bugs.webkit.org/show_bug.cgi?id=30385

Patch by Antonio Gomes <tonikitoo@webkit.org> on 2009-10-15
Reviewed by Tor Arne.

Set page's pageClient reference to '0' at QGWV deletion.

* Api/qgraphicswebview.cpp:
(QGraphicsWebView::~QGraphicsWebView):
* tests/qgraphicswebview/tst_qgraphicswebview.cpp:
(WebPage::WebPage):
(WebPage::aborting):
(tst_QGraphicsWebView::crashOnViewlessWebPages):

Canonical link: https://commits.webkit.org/41098@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49634 268f45cc-cd09-0410-ab3c-d52691b4dbfc